--- a/TGE/TGE.vcxproj
+++ b/TGE/TGE.vcxproj
@@ -128,14 +128,11 @@
     <ClInclude Include="audio\tgAudioBuffer.h" />
     <ClInclude Include="audio\tgAudioSource.h" />
     <ClInclude Include="audio\tgSampleData.h" />
-    <ClInclude Include="components\tgAudioSourceComponent.h" />
+    <ClInclude Include="components\tgSprite.h" />
+    <ClInclude Include="components\tgText.h" />
     <ClInclude Include="core\picojson.h" />
     <ClInclude Include="core\stb_vorbis.h" />
     <ClInclude Include="audio\tgAudioSystem.h" />
-    <ClInclude Include="components\tgEmitterComponent.h" />
-    <ClInclude Include="components\tgSpriteComponent.h" />
-    <ClInclude Include="components\tgFontComponent.h" />
-    <ClInclude Include="components\tgTransformComponent.h" />
     <ClInclude Include="core\stb.h" />
     <ClInclude Include="core\stb_image.h" />
     <ClInclude Include="core\stb_image_write.h" />
@@ -150,8 +147,9 @@
     <ClInclude Include="core\tgUtil.h" />
     <ClInclude Include="core\tgWindow.h" />
     <ClInclude Include="ecs\tgComponent.h" />
-    <ClInclude Include="ecs\tgComponentManager.h" />
+    <ClInclude Include="ecs\tgECS.h" />
     <ClInclude Include="ecs\tgMessenger.h" />
+    <ClInclude Include="ecs\tgSystem.h" />
     <ClInclude Include="graphics\tgBuffer.h" />
     <ClInclude Include="graphics\tgFrameBuffer.h" />
     <ClInclude Include="graphics\tgGL.h" />
@@ -165,11 +163,13 @@
     <ClInclude Include="math\tgMath.h" />
     <ClInclude Include="math\tgMatrixBase.h" />
     <ClInclude Include="math\tgQuaternion.h" />
-    <ClInclude Include="math\tgTransform.h" />
+    <ClInclude Include="components\tgTransform.h" />
     <ClInclude Include="math\tgVectorBase.h" />
     <ClInclude Include="scripting\sol.hpp" />
     <ClInclude Include="scripting\tgScript.h" />
     <ClInclude Include="core\tgTime.h" />
+    <ClInclude Include="systems\tgSpriteSystem.h" />
+    <ClInclude Include="systems\tgTextSystem.h" />
     <ClInclude Include="tween\tgTimer.h" />
     <ClInclude Include="tween\tgTween.h" />
     <ClInclude Include="tween\tgTweens.h" />
@@ -180,10 +180,7 @@
     <ClCompile Include="audio\tgAudioSource.cpp" />
     <ClCompile Include="audio\tgAudioSystem.cpp" />
     <ClCompile Include="audio\tgSampleData.cpp" />
-    <ClCompile Include="components\tgAudioSourceComponent.cpp" />
-    <ClCompile Include="components\tgEmitterComponent.cpp" />
-    <ClCompile Include="components\tgFontComponent.cpp" />
-    <ClCompile Include="components\tgSpriteComponent.cpp" />
+    <ClCompile Include="components\tgSprite.cpp" />
     <ClCompile Include="core\tgEngine.cpp" />
     <ClCompile Include="core\tgFont.cpp" />
     <ClCompile Include="core\tgGameState.cpp" />
@@ -192,7 +189,7 @@
     <ClCompile Include="core\tgLog.cpp" />
     <ClCompile Include="core\tgUtil.cpp" />
     <ClCompile Include="core\tgWindow.cpp" />
-    <ClCompile Include="ecs\tgComponentManager.cpp" />
+    <ClCompile Include="ecs\tgECS.cpp" />
     <ClCompile Include="ecs\tgMessenger.cpp" />
     <ClCompile Include="graphics\tgBuffer.cpp" />
     <ClCompile Include="graphics\tgFrameBuffer.cpp" />
@@ -206,9 +203,11 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math\tgMath.cpp" />
     <ClCompile Include="math\tgQuaternion.cpp" />
-    <ClCompile Include="math\tgTransform.cpp" />
+    <ClCompile Include="components\tgTransform.cpp" />
     <ClCompile Include="scripting\tgScript.cpp" />
     <ClCompile Include="core\tgTime.cpp" />
+    <ClCompile Include="systems\tgSpriteSystem.cpp" />
+    <ClCompile Include="systems\tgTextSystem.cpp" />
     <ClCompile Include="tween\tgTimer.cpp" />
     <ClCompile Include="tween\tgTween.cpp" />
     <ClCompile Include="tween\tgTweens.cpp" />
