Fix many bugs and improve text rendering
	- Now you canset the text color and the text alignment
	- The text now can have multiple lines (separated by \n)
	- A new "Bounce" easing function has been added
	- The particle engine is completely finished

--- a/TGE/TGE.vcxproj
+++ b/TGE/TGE.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="audio\tgAudioSystem.cpp" />
     <ClCompile Include="audio\tgSampleData.cpp" />
     <ClCompile Include="components\tgSprite.cpp" />
+    <ClCompile Include="components\tgText.cpp" />
     <ClCompile Include="core\tgEngine.cpp" />
     <ClCompile Include="core\tgFont.cpp" />
     <ClCompile Include="core\tgGameState.cpp" />
