--- a/TGE/TGE.vcxproj
+++ b/TGE/TGE.vcxproj
@@ -74,13 +74,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)deps\physfs\include;$(SolutionDir)deps\SDL2\include;$(SolutionDir)deps\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)deps\lua\include;$(SolutionDir)deps\physfs\include;$(SolutionDir)deps\SDL2\include;$(SolutionDir)deps\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_NO_DEBUG_HEAP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2\lib;$(SolutionDir)deps\glew\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
-      <AdditionalDependencies>openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)deps\lua\lib;$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2\lib;$(SolutionDir)deps\glew\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
+      <AdditionalDependencies>lua51.lib;openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -98,15 +98,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)deps\physfs\include;$(SolutionDir)deps\SDL2\include;$(SolutionDir)deps\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)deps\lua\include;$(SolutionDir)deps\physfs\include;$(SolutionDir)deps\SDL2\include;$(SolutionDir)deps\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2\lib;$(SolutionDir)deps\glew\lib;%(AdditionalLibraryDirectories);$(VcpkgRoot)lib;$(VcpkgRoot)lib\manual-link</AdditionalLibraryDirectories>
-      <AdditionalDependencies>openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)deps\lua\lib;$(SolutionDir)deps\physfs\lib;$(SolutionDir)deps\SDL2\lib;$(SolutionDir)deps\glew\lib;%(AdditionalLibraryDirectories);$(VcpkgRoot)lib;$(VcpkgRoot)lib\manual-link</AdditionalLibraryDirectories>
+      <AdditionalDependencies>lua51.lib;openal32.lib;opengl32.lib;glu32.lib;glew32s.lib;SDL2.lib;SDL2main.lib;physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -170,6 +170,7 @@
     <ClInclude Include="scripting\sol.hpp" />
     <ClInclude Include="scripting\tgScript.h" />
     <ClInclude Include="core\tgTime.h" />
+    <ClInclude Include="scripting\tgScriptEngine.h" />
     <ClInclude Include="systems\tgSpriteSystem.h" />
     <ClInclude Include="systems\tgTextSystem.h" />
     <ClInclude Include="tween\tgTimer.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="components\tgTransform.cpp" />
     <ClCompile Include="scripting\tgScript.cpp" />
     <ClCompile Include="core\tgTime.cpp" />
+    <ClCompile Include="scripting\tgScriptEngine.cpp" />
     <ClCompile Include="systems\tgSpriteSystem.cpp" />
     <ClCompile Include="systems\tgTextSystem.cpp" />
     <ClCompile Include="tween\tgTimer.cpp" />
